cabal-version:   3.4
name:	         hydra
version:         3.4.0
synopsis:        Computer hardware description language
author:	         John T. O'Donnell
copyright:       (c) 2021 John T. O'Donnell
maintainer:      john.t.odonnell9@gmail.com
license:         GPL-3.0-or-later
license-file:    LICENSE.txt
category:        Language Hardware Circuit
stability:       experimental
homepage:        https://github.com/jtod/Hydra
build-type:      Simple
tested-with:     GHC == 9.0.1

description: Hydra is a functional computer hardware description
             language for specifying the structure and behavior of
             synchronous digital circuits.  It supports several levels
             of abstraction, including logic gates and flip flops,
             register transfer level, datapath and control, and
             processors.  It provides readable specifications of
             circuits, and can simulate circuits, generate netlists,
             and emulate instruction set architectures.  The User
             Guide gives a tutorial introduction: see 
             <docs/userguide/HydraUserGuide.html>

source-repository head
  type:     git
  location: https://github.com/jtod/Hydra

extra-doc-files: docs/HydraUserGuide/HydraUserGuide.html
                 docs/HydraUserGuide/HydraUserGuide.css

library
  default-language: Haskell2010
  build-depends:    base >= 4 && < 5,
                    transformers >= 0.3 && < 0.6,
                    mtl,
                    containers,
                    filepath,
                    ansi-terminal,
                    parsec
  hs-source-dirs:   src
  exposed-modules:
                    HDL.Hydra.Core.Lib,
                    HDL.Hydra.Circuits.Combinational,
                    HDL.Hydra.Circuits.Register
  other-modules:    HDL.Hydra.Core.Signal,
                    HDL.Hydra.Core.SigStream,
                    HDL.Hydra.Core.CombTools,
                    HDL.Hydra.Core.Driver,
                    HDL.Hydra.Core.SigBool,
                    HDL.Hydra.Core.PrimData,
                    HDL.Hydra.Core.Pattern,
                    HDL.Hydra.Core.RTL
